--- a/_posts/2020-06-05-zchilds.md
+++ b/_posts/2020-06-05-zchilds.md
@@ -8,4 +8,4 @@ The John Wick series! I recently finished all 3 of them and they were a refreshi
 
 ![John Wick](https://www.indiewire.com/wp-content/uploads/2019/05/07956f40-77c4-11e9-9073-657a85982e73.jpg)
 
-Comment your reply here.
+John Wick??  The guy from Fortnite???  :0
